Fix box overflow in IE11

--- a/src/components/box/_box.scss
+++ b/src/components/box/_box.scss
@@ -1,6 +1,6 @@
 .ks-box {
   background: rgba(0,0,0,0.7);
-  flex: 1 1 auto;
+  flex: 1 1 100%;
   position: relative;
   display: flex;
 
